actualizado botones y mensaje vacio

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main class="contenedor">
-        <section>
+        <section class="principal">
             <h2>Formulario</h2>
             <form class="formulario" action="#" id="formulario">
                 <label for="titulo">Titulo</label>
@@ -22,9 +22,9 @@
                 <input class="btn" type="submit" value="Enviar consulta">
             </form>
         </section>
-            <h3>Mostrar</h3>
+            <h2>Mostrar</h2>
         <section class="listas">
-            <select id="filtro"></select>
+            <select id="filtro" disabled></select>
             
             <table>
                 <thead>
